update the docs for Update the name of a specific index
